--- a/1_Final version_0.00089.ipynb
+++ b/1_Final version_0.00089.ipynb
@@ -6243,34 +6243,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.to_csv(\"Data_Challenge.csv\", header = None, index = None)\n"
+    "test_df.to_csv(\"Data_Challenge.csv\", header = None, index = None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "virtual",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6284,9 +6263,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
