--- a/4_preprocessing_mediapipe.ipynb
+++ b/4_preprocessing_mediapipe.ipynb
@@ -4032,11 +4032,6 @@
    "source": [
     "# END"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -4044,8 +4039,11 @@
    "display_name": "Python WSL (myenv)",
    "language": "python",
    "name": "myenv"
+  },
+  "language_info": {
+   "name": ""
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
